--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@ Majors Average Score: 94%
 									</ul>
 								</section>
 							</div>
+
 						</div>
 					</section>
 
@@ -277,7 +278,7 @@ Majors Average Score: 94%
 									<ul class="contact">
 										<li>
 											<h3>Email</h3>
-											<a href="mailto:prajwalk7@gmail.com">prajwalk7@gmail.com</a>
+											<a href="https://mail.google.com/mail/u/0/#inbox?compose=new">prajwalk7@gmail.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
