--- a/index.html
+++ b/index.html
@@ -154,9 +154,20 @@ Majors Average Score: 94%
 						<div class="inner">
 							<div class="features">
 								<section>
+								<i class="fa fa-plane"></i>
+									<h3>Domestic Flights Price Predictor</h3>
+									<p>Using various Regression techniques to predict domestic flight prices. Web App deployed on Heroku.
+									</p>
+									<ul class="actions">
+										<button type = "button" style="font-size:8px"><a href="https://github.com/prajwalk7/Domestic-Flights-Price-Predictor">Learn More</a></button>
+										<button type = "button" style="font-size:8px"><a href="https://dom-flights-price-pred.herokuapp.com/">View Web App</a></button>
+									</ul>
+
+								</section>
+								<section>
 								<i class="fa fa-soccer-ball-o"></i>
 									<h3>IPL First Innings Score Predictor</h3>
-									<p>Using various Regression techniques to predict the first innings score of an IPL match.
+									<p>Using various Regression techniques to predict the first innings score of an IPL match. Deployed a Web App on Heroku.
 									</p>
 									<ul class="actions">
 										<button type = "button" style="font-size:8px"><a href="https://github.com/prajwalk7/IPL-First-Innings-Score-Prediction">Learn More</a></button>
@@ -184,7 +195,7 @@ Majors Average Score: 94%
 									<h3>Titanic Survivor Prediction</h3>
 									<p>Using Classifier techniques to predict the survivor of the Titanic, based on the features given to the input.</p>
 									<ul class="actions">
-										<button type = "button" style="font-size:8px"><a href="https://github.com/prajwalk7/Titanic-Survivor-Prediction">Learn More</a></button>
+										<button type = "button" style="font-size:12px"><a href="https://github.com/prajwalk7/Titanic-Survivor-Prediction">Learn More</a></button>
 									</ul>
 								</section>
 								<section>
