--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">About</a></li>
-							<li><a href="#one">Experiance</a></li>
+							<li><a href="#one">Experience</a></li>
 							<li><a href="#two">Education</a></li>
 							<li><a href="#three">Projects</a></li>
 							<li><a href="#four">Skills</a></li>
@@ -54,7 +54,7 @@
 
 						<div class = "inner">
 							<div>
-							<h1 style = "text-align: center">Experiance</h1>
+							<h1 style = "text-align: center">Experience</h1>
 						</div>
 						</div>
 
