--- a/index.html
+++ b/index.html
@@ -177,9 +177,11 @@ Majors Average Score: 94%
 								<section>
 									<i class="fa fa-home"></i>
 									<h3>Bengaluru House Prices Prediction</h3>
-									<p>Clean, Process and Predict the house prices in Bengaluru using statistical imputation.</p>
+									<p>Clean, Process and Predict the house prices in Bengaluru using statistical imputation.Web app deployed on Heroku</p>
 									<ul class="actions">
 											<button type = "button" style="font-size:8px"><a href="https://github.com/prajwalk7/Bengaluru-House-Price-Prediction">Learn More</a></button>
+											<button type = "button" style="font-size:8px"><a href="https://bengaluru-homeprice-pred.herokuapp.com/">View Web App</a></button>
+																
 									</ul>
 								</section>
 								<section>
