--- a/index.html
+++ b/index.html
@@ -41,18 +41,16 @@
 							<h1 style = "text-align: center">Prajwal Srinvias</h1>
 							<p style = "text-align: center">Data Driven - Result Oriented - Analytical</p>
 
-							<p style = "text-align: center"> Experienced Business/Risk Analyst with a demonstrated history of working in the finance industry. 
-								Skilled in Business Analysis, Consulting, Model Risk, Stakeholder Management, Databases, Data Manipulation/Wrangling, 
-								descriptive/inferential statistical analysis, and concepts of ML. Strong research professional currently pursuing a 
-								Master's degree focused on Data Analytics Engineering, from Northeastern University. With around 4 years of industry 
-								experience, I bring a cluster of technical, communication and management skills.
-
+							<p style = "text-align: center"> Experienced Business/Risk Analyst with a demonstrated history of working in the finance industry, and currently
+								pursuing a Master's degree focused on Data Analytics Engineering, from Northeastern University, Boston. With around 4 years of industry 
+								experience, I bring a cluster of technical, communication and management skills. Skilled in Business Analysis, Consulting, Model Risk, Stakeholder Management, Databases, Data Manipulation/Wrangling, 
+								descriptive/inferential statistical analysis, and concepts of ML. 
+								<br>
 								My peers describe me as a committed individual with proficient communication skills, capable of demonstrating professional skepticism, 
-								showing healthy curiosity and a proactive 
-								attitude in adverse situations. Looking forward to leading positions in the industry that offer sharp learning and
+								showing healthy curiosity and a proactive attitude in adverse situations. Looking forward to leading positions in the industry that offer sharp learning and
 								career-growth. Every challenge from data inception to data modelling to conveying actionable insights of a project excites me and 
-								urges me to reach the depths of the subject and push the limits of my knowledge. I modestly try to learn new things and pickup new technologies, 
-								work with them to extend my understanding through implementation, and eventually improve upon my horizontal exposure, and vertical expertise!</p>
+								urges me to reach the depth of the subject. I modestly try to learn new things and pickup new technologies, 
+								work with them to extend my understanding through implementation, and eventually improve upon my horizontal exposure, and vertical expertise.</p>
 							<ul style = "text-align: center; list-style: none">
 								<li><a href="https://drive.google.com/file/d/1aoGv1HL7khRvuU1qdD6aOd-5iX4CXVmc/view?usp=sharing" class="button scrolly">View Resume</a></li>
 							</ul>
