--- a/index.html
+++ b/index.html
@@ -164,6 +164,15 @@ Computation and Visualization for Analytics. <br><br> </p>
 						<div class="inner">
 							<div class="features">
 								<section>
+									<i class="fa fa-bar-chart"></i>
+									<h3>Visualization Projects</h3>
+									<p>Tableau Basics Detailed Handbook, COVID 19 scenario in India, IPL 2016-19 Metrics, IMDb Movie Ratings, Indian
+									Foreign Direct Investment, Boston Real Estate.</p>
+									<ul class="actions">
+										<button type = "button" style="font-size:8px"><a href="https://public.tableau.com/profile/prajwal.s6225#!/">Learn More</a></button>
+									</ul>
+								</section>
+								<section>
 								<i class="fa fa-plane"></i>
 									<h3>Domestic Flights Price Predictor</h3>
 									<p>Using various Regression techniques to predict domestic flight prices. Web App deployed on Heroku.
@@ -207,7 +216,7 @@ Computation and Visualization for Analytics. <br><br> </p>
 									<h3>Titanic Survivor Prediction</h3>
 									<p>Using Classifier techniques to predict the survivor of the Titanic, based on the features given to the input.</p>
 									<ul class="actions">
-										<button type = "button" style="font-size:12px"><a href="https://github.com/prajwalk7/Titanic-Survivor-Prediction">Learn More</a></button>
+										<button type = "button" style="font-size:8px"><a href="https://github.com/prajwalk7/Titanic-Survivor-Prediction">Learn More</a></button>
 									</ul>
 								</section>
 								<section>
