--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								urges me to reach the depth of the subject. I modestly try to learn new things and pickup new technologies, 
 								work with them to extend my understanding through implementation, and eventually improve upon my horizontal exposure, and vertical expertise.</p>
 							<ul style = "text-align: center; list-style: none">
-								<li><a href="https://drive.google.com/file/d/1aoGv1HL7khRvuU1qdD6aOd-5iX4CXVmc/view?usp=sharing" class="button scrolly">View Resume</a></li>
+								<li><a href="https://drive.google.com/file/d/1CpCL0-bSe8YoyCADDL_uz6CecM4VtNWB/view?usp=sharing" class="button scrolly">View Resume</a></li>
 							</ul>
 						</div>
 
@@ -312,7 +312,7 @@ Computation and Visualization for Analytics. <br><br> </p>
 									<ul class="contact">
 										<li>
 											<h3>Email</h3>
-											<a href="https://mail.google.com/mail/u/0/#inbox?compose=new">prajwalk7@gmail.com</a>
+											<a href="https://mail.google.com/mail/u/0/#inbox?compose=new">prajwalsri28@gmail.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
