--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
 		  						Sep 2020 - Aug 2022<br><br>
 
 									<p>Strategy, Governance and processes for Model Risk Management of models catering to various financial crime themes –
-AML Transaction Monitoring/Sanctions/Fraud Risk/Risk Rating/Surveillance.
-.</p>
-									<p>BPerform validation and approval of the firm’s models (Rule-Based/Statistical/ML based) by verifying conceptual
+AML Transaction Monitoring/Sanctions/Fraud Risk/Risk Rating/Surveillance.</p>
+									<p>Perform validation and approval of the firm’s models (Rule-Based/Statistical/ML based) by verifying conceptual
 soundness, methodology, implantation identifying limitations and uncertainties. Assess & quantify model risk; oversee
 ongoing model risk by verifying the monitoring framework.</p>
 									<p>Managing key stakeholders from multiple countries by liaising between the developers and the business lines.</p>
@@ -133,7 +132,7 @@ ongoing model risk by verifying the monitoring framework.</p>
 <section>
 							<div class="content">
 								<div class="inner">
-									<h2>Northeastern University</h2>
+									<h2>Northeastern University, Boston, MA</h2>
 									<h4>Master of Science in Data Analytics Engineering</h4>
 									Sep 2022 - Exp. May 2024<br><br>
 									<p>Related Courses: Data Management for Analytics, Foundation of Data Analytics, Data Mining in Engineering,
@@ -144,7 +143,7 @@ Computation and Visualization for Analytics. <br><br> </p>
 						<section>
 							<div class="content">
 								<div class="inner">
-									<h2>B.M.S.College Of Engineering, Bangalore</h2>
+									<h2>B.M.S.College Of Engineering, Bengaluru, India</h2>
 									<h4>Bachelor of Electronics and Communication Engineering</h4>
 									Aug 2014 - Jun 2018<br><br>
 									<p>Related Courses: Advanced Engineering Mathematics, Probability and Random Process, Linear Algebra.<br><br> CGPA:	8.56(GPA = 3.75)</p>
