--- a/index.html
+++ b/index.html
@@ -74,12 +74,18 @@
 									<h4>Analyst of Decision Sciences</h4>
 		  						Sep 2020 - Aug 2022<br><br>
 
-									<p>Strategy, Governance and processes for Model Risk Management of models catering to various financial crime themes –
-AML Transaction Monitoring/Sanctions/Fraud Risk/Risk Rating/Surveillance.</p>
-									<p>Perform validation and approval of the firm’s models (Rule-Based/Statistical/ML based) by verifying conceptual
-soundness, methodology, implantation identifying limitations and uncertainties. Assess & quantify model risk; oversee
-ongoing model risk by verifying the monitoring framework.</p>
-									<p>Managing key stakeholders from multiple countries by liaising between the developers and the business lines.</p>
+									<p>Governed and audited 70+ FCR models inline with the model risk management framework for financial crimes, such as
+AML Transaction Monitoring/Sanctions/Risk Rating/Fraud Risk/Surveillance.</p>
+									<p>Validated Rule-Based/Statistical/ML based models based on relevant business KPIs and metrics.</p>
+									<p>Investigated model risks by assessing data privacy, security and policies based on demography and group model risk
+policy/standards.</p>
+									<p>Proposed and implemented agile risk review framework to reduce governance TAT by 36 hours on average per model.
+</p>
+									<p>Managed key international stakeholders from over 55 countries for model compliance across 7 world regions.</p>
+									<p>Acted as liaison between developers and business lines for definition, clarity and implementation of models to achieve
+business objectives.
+</p>
+									<p>Awarded ”Rising Star - 2021” in Global Analytics Center (GAC) - HSBC.</p>
 										
 								</div>
 							</div>
@@ -94,7 +100,7 @@ ongoing model risk by verifying the monitoring framework.</p>
 									<h2>iNeuron.ai</h2>
 									<h4>Data Analyst Intern</h4>
 		  						Apr 2020 - Jul 2020<br><br>
-
+									<p> Presented Tableau dashboards for business insights and in-house management information.</p>
 									<p>Worked on cleaning, wrangling manipulating data using python/R required for multiple in-house solutions.</p>
 									<p>Built front end webapps for multiple ML solutions using Django, Flask and deployed them using Heroku.</p>
 								</div>
@@ -247,6 +253,7 @@ Computation and Visualization for Analytics. <br><br> </p>
 
 
 								<button type = "button" disabled>Python</button>
+								<button type = "button" disabled>Stakeholder Management</button>
 								<button type = "button" disabled>SQL</button>
 								<button type = "button" disabled>Tableau</button>
 								<button type = "button" disabled>Microsoft Power BI</button>
@@ -254,6 +261,7 @@ Computation and Visualization for Analytics. <br><br> </p>
 								<button type = "button" disabled>Oracle DB/SQLite/MySQL/SQL Server</button>
 								<button type = "button" disabled>MongoDB</button>
 								<button type = "button" disabled>ETL/Datawarehousing</button>
+								
 
 								<button type = "button" disabled>Scikit Learn</button>
 								<button type = "button" disabled>Beautiful Soup</button>
