--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1 style = "text-align: center">Prajwal Srinvias</h1>
+							<h1 style = "text-align: center">Prajwal Srinivas</h1>
 							<p style = "text-align: center">Data Driven - Result Oriented - Analytical</p>
 
 							<p style = "text-align: center"> Experienced Business/Risk Analyst with a demonstrated history of working in the finance industry, and currently
