--- a/index.html
+++ b/index.html
@@ -170,6 +170,17 @@ Computation and Visualization for Analytics. <br><br> </p>
 							<div class="features">
 								<section>
 									<i class="fa fa-bar-chart"></i>
+									<h3>RBC Bank Customer Churn Analysis</h3>
+									<p>Detailed churn analysis of RBC Bank customers. Analyzed the data and bring out few insights on the customer Churn. 
+										In the visualization, we understand the different criteria's pushing the customers to leave the bank. 
+										The report and the dashboard have been created using Microsoft Power BI.</p>
+									<ul class="actions">
+										<button type = "button" style="font-size:8px"><a href="https://github.com/prajwalk7/rbc-churn-powerbi">Learn More</a></button>
+									</ul>
+								</section>
+								<section>
+								<section>
+									<i class="fa fa-bar-chart"></i>
 									<h3>Visualization Projects</h3>
 									<p>Tableau Basics Detailed Handbook, COVID 19 scenario in India, IPL 2016-19 Metrics, IMDb Movie Ratings, Indian
 									Foreign Direct Investment, Boston Real Estate.</p>
