--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ business objectives.
 									<h2>Northeastern University, Boston, MA</h2>
 									<h4>Master of Science in Data Analytics Engineering</h4>
 									Sep 2022 - Exp. May 2024<br><br>
-									<p>Related Courses: Data Management for Analytics, Foundation of Data Analytics, Data Mining in Engineering,
+									<p>Related Courses: Data Management for Analytics, Advacned Probability and Statistics, Data Mining in Engineering,
 Computation and Visualization for Analytics. <br><br> </p>
 								</div>
 							</div>
