--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								urges me to reach the depth of the subject. I modestly try to learn new things and pickup new technologies, 
 								work with them to extend my understanding through implementation, and eventually improve upon my horizontal exposure, and vertical expertise.</p>
 							<ul style = "text-align: center; list-style: none">
-								<li><a href="https://drive.google.com/file/d/1N3bVnaddBsTj9yFgixeKy0J9P5abVFbD/view?usp=sharing" class="button scrolly">View Resume</a></li>
+								<li><a href="https://drive.google.com/file/d/1p4ZE0EPJ4WW4HRUtwTXqz-Nfi4sAgW3J/view?usp=sharing" class="button scrolly">View Resume</a></li>
 							</ul>
 						</div>
 
@@ -74,18 +74,17 @@
 									<h4>Analyst of Decision Sciences</h4>
 		  						Sep 2020 - Aug 2022<br><br>
 
-									<p>Governed and audited 70+ FCR models inline with the model risk management framework for financial crimes, such as
-AML Transaction Monitoring/Sanctions/Risk Rating/Fraud Risk/Surveillance.</p>
-									<p>Validated Rule-Based/Statistical/ML based models based on relevant business KPIs and metrics.</p>
-									<p>Investigated model risks by assessing data privacy, security and policies based on demography and group model risk
-policy/standards.</p>
-									<p>Proposed and implemented agile risk review framework to reduce governance TAT by 36 hours on average per model.
-</p>
-									<p>Managed key international stakeholders from over 55 countries for model compliance across 7 world regions.</p>
-									<p>Acted as liaison between developers and business lines for definition, clarity and implementation of models to achieve
-business objectives.
-</p>
-									<p>Awarded ”Rising Star - 2021” in Global Analytics Center (GAC) - HSBC.</p>
+									<p>Governed and risk assessed model compliance inline with the model risk management framework for financial crimes (AML TM,
+Sanctions, Risk Rating, Fraud Risk, and Surveillance), fulfilling governance and auditing of over 70 FCR models.
+.</p>
+									<p>Evaluated and optimized the performance of rule-based, statistical, and ML-based models by aligning them with model risk drivers
+- based on demography and group model risk policy/standards (GMRP/GMRS/MCS), achieved a 31% increase in model lift.</p>
+									<p>Managed and coordinated with key international stakeholders from over 55 countries to ensure model compliance; resulting in a
+90% compliance rate and a 15% reduction ($30mil) in loss due to non-compliance.</p>
+									<p>Orchestrated cross-functional collaboration between developers and business units through effective stakeholder management,
+leading to 11% uplift in monitoring coverage with minimal governance expenditure.</p>
+									<p>Implemented an efficient agile risk review framework reducing the governance TAT by an average of 36 hours per model.</p>
+									<p>Awarded the ”Rising Star - 2021” in Global Analytics Center (GAC) - HSBC.</p>
 										
 								</div>
 							</div>
@@ -100,10 +99,11 @@ business objectives.
 									<h2>iNeuron.ai</h2>
 									<h4>Data Analyst Intern</h4>
 		  						Apr 2020 - Jul 2020<br><br>
-									<p> Presented Tableau dashboards for business insights and in-house management information.</p>
-									<p>Worked on cleaning, wrangling manipulating data using python/R required for multiple in-house solutions.</p>
-									<p>Built front end webapps for multiple ML solutions using Django, Flask and deployed them using Heroku.</p>
-								</div>
+									<p> Built diverse data visualizations in Tableau while integrating scalable data sources, providing remarkable insights and increasing
+overall user engagement by 40%.</p>
+									<p>Developed fully functional web applications using Django and Flask to enhance customer experience; leading to a 20% user
+growth. Deployed the model and the web app on Heroku with 93% satisfaction ratings from stakeholders.</p>
+									</div>
 							</div>
 						</section>
 						
@@ -115,11 +115,11 @@ business objectives.
 									<h4>Assistant Systems Engineer</h4>
 		  						Oct 2018 - Apr 2020<br><br>
 
-									<p>Design, Implementation of safety critical software using Ada95 and Python scripting for Rolls Royce Aerospace. Fetching
-										Engine metrics for drafting using SQL, providing visual analytics of project process using MS Excel/Tableau.</p>
-									<p>Handling of SCRUM stand up calls and mentoring junior associates on project process and planning. Implemented an
-										automated MI reporting tool (using sharepoint, python matplotlib/dash/plotly/numpy/pandas) with appropriate
-										reporting metrics, which saved over 150 hours annually.</p>
+									<p>Delivered safety critical software modules for Rolls Royce Aerospace (Trent 1000/XWB, BR700) with Python and Ada95;
+increasing system reliability by 15% (MTTR) and increasing MTBF time by 35%.</p>
+									<p>Leveraged Tableau to analyze engine metric KPI data sets, providing process visibility and project planning, enabling key decisions
+as an interim SCRUM Master (team of 4).</p>
+									<p>Constructed automated MI reporting tool with Python and VBA; resulting in 150+ annual man-hours savings.</p>
 								</div>
 							</div>
 						</section>
@@ -141,8 +141,7 @@ business objectives.
 									<h2>Northeastern University, Boston, MA</h2>
 									<h4>Master of Science in Data Analytics Engineering</h4>
 									Sep 2022 - Exp. May 2024<br><br>
-									<p>Related Courses: Data Management for Analytics, Advacned Probability and Statistics, Data Mining in Engineering,
-Computation and Visualization for Analytics. <br><br> </p>
+									<p>Related Courses: Advanced Database Management, Statistics & Probability, Data Mining, Computation & Visualization for Analytics. <br><br>GPA: 4.0 </p>
 								</div>
 							</div>
 						</section>
@@ -177,6 +176,17 @@ Computation and Visualization for Analytics. <br><br> </p>
 									</ul>
 								</section>
 								<section>
+									<i class="fa fa-database"></i>
+									<h3>FoodPro - Database System and Analytics for an online food delivery application</h3>
+									<p>Created a robust scalable database system - leveraging MySQL and MongoDB for efficient data operations; implemented data
+validation, normalization and security measures to ensure data integrity and confidentiality. Analyzed real-time data (transactional and reference) with Python, SQl and NoSQL to suggest A/B testing marketing campaigns.
+Increased customer repeat rate by 28%; recommended subscription marketing strategies.
+</p>
+									<ul class="actions">
+										<button type = "button" style="font-size:8px"><a href="https://github.com/prajwalk7/FoodPro---Online-Food-Delivery-Database-Management-System-and-Analytics">Learn More</a></button>
+									</ul>
+								</section>
+								<section>
 									<i class="fa fa-bar-chart"></i>
 									<h3>Visualization Projects</h3>
 									<p>Tableau Basics Detailed Handbook, COVID 19 scenario in India, IPL 2016-19 Metrics, IMDb Movie Ratings, Indian
@@ -188,8 +198,7 @@ Computation and Visualization for Analytics. <br><br> </p>
 								<section>
 								<i class="fa fa-plane"></i>
 									<h3>Domestic Flights Price Predictor</h3>
-									<p>Using various Regression techniques to predict domestic flight prices. Web App deployed on Heroku.
-									</p>
+									<p>Hypertuned ensemble model (Random Forest) with cross validation (Grid Search) on Root Mean Squared Error (RMSE) and Mean Absolute Error (MAE) while achieving a final accuracy of over 85%. Set up a Flask web app to predict domestic flights prices in India. </p>								</p>
 									<ul class="actions">
 										<button type = "button" style="font-size:8px"><a href="https://github.com/prajwalk7/Domestic-Flights-Price-Predictor">Learn More</a></button>
 										<button type = "button" style="font-size:8px"><a href="https://dom-flights-price-pred.herokuapp.com/">View Web App</a></button>
@@ -199,7 +208,9 @@ Computation and Visualization for Analytics. <br><br> </p>
 								<section>
 								<i class="fa fa-soccer-ball-o"></i>
 									<h3>IPL First Innings Score Predictor</h3>
-									<p>Using various Regression techniques to predict the first innings score of an IPL match. Deployed a Web App on Heroku.
+									<p>Fitted ridge regression model (to reduce multi-collinearity) on historical cricket matches data to predict scores for teams based on
+match parameters, also deployed on Heroku as a web app.
+
 									</p>
 									<ul class="actions">
 										<button type = "button" style="font-size:8px"><a href="https://github.com/prajwalk7/IPL-First-Innings-Score-Prediction">Learn More</a></button>
@@ -209,7 +220,8 @@ Computation and Visualization for Analytics. <br><br> </p>
 								<section>
 									<i class="fa fa-home"></i>
 									<h3>Bengaluru House Prices Prediction</h3>
-									<p>Clean, Process and Predict the house prices in Bengaluru using statistical imputation.Web app deployed on Heroku</p>
+									<p>Achieved 87% accuracy with linear regression for predicting house prices in Bengaluru, India (over 13000 data points). Deployed
+the best model on webapp (Flask, HTML/CSS) hosted on Heroku.</p>
 									<ul class="actions">
 											<button type = "button" style="font-size:8px"><a href="https://github.com/prajwalk7/Bengaluru-House-Price-Prediction">Learn More</a></button>
 											<button type = "button" style="font-size:8px"><a href="https://bengaluru-homeprice-pred.herokuapp.com/">View Web App</a></button>
@@ -331,7 +343,7 @@ Computation and Visualization for Analytics. <br><br> </p>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<span><a href="tel:++918971792176">+1 (857)-869-1657</a></span>
+											<span><a href="tel:+18578691657">+1 (857)-869-1657</a></span>
 										</li>
 										<li>
 											<h3>Social</h3>
@@ -353,7 +365,7 @@ Computation and Visualization for Analytics. <br><br> </p>
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li> Copyright &copy; 2022 Prajwal Srinivas.</li>
+						<li> Copyright &copy; 2023 Prajwal Srinivas.</li>
 				</div>
 			</footer>
 
