--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
 		  						Sep 2020 - Aug 2022<br><br>
 
 									<p>Governed and risk assessed model compliance inline with the model risk management framework for financial crimes (AML TM,
-Sanctions, Risk Rating, Fraud Risk, and Surveillance), fulfilling governance and auditing of over 70 FCR models.
-.</p>
+Sanctions, Risk Rating, Fraud Risk, and Surveillance), fulfilling governance and auditing of over 70 FCR models.</p>
 									<p>Evaluated and optimized the performance of rule-based, statistical, and ML-based models by aligning them with model risk drivers
 - based on demography and group model risk policy/standards (GMRP/GMRS/MCS), achieved a 31% increase in model lift.</p>
 									<p>Managed and coordinated with key international stakeholders from over 55 countries to ensure model compliance; resulting in a
@@ -99,7 +98,7 @@ leading to 11% uplift in monitoring coverage with minimal governance expenditure
 									<h2>iNeuron.ai</h2>
 									<h4>Data Analyst Intern</h4>
 		  						Apr 2020 - Jul 2020<br><br>
-									<p> Built diverse data visualizations in Tableau while integrating scalable data sources, providing remarkable insights and increasing
+									<p>Built diverse data visualizations in Tableau while integrating scalable data sources, providing remarkable insights and increasing
 overall user engagement by 40%.</p>
 									<p>Developed fully functional web applications using Django and Flask to enhance customer experience; leading to a 20% user
 growth. Deployed the model and the web app on Heroku with 93% satisfaction ratings from stakeholders.</p>
@@ -151,7 +150,7 @@ as an interim SCRUM Master (team of 4).</p>
 									<h2>B.M.S.College Of Engineering, Bengaluru, India</h2>
 									<h4>Bachelor of Electronics and Communication Engineering</h4>
 									Aug 2014 - Jun 2018<br><br>
-									<p>Related Courses: Advanced Engineering Mathematics, Probability and Random Process, Linear Algebra.<br><br> CGPA:	8.56(GPA = 3.75)</p>
+									<p>Related Courses: Advanced Engineering Mathematics, Probability and Random Process, Linear Algebra.<br><br> CGPA: 8.56(GPA = 3.9)</p>
 								</div>
 							</div>
 						</section>
@@ -178,10 +177,7 @@ as an interim SCRUM Master (team of 4).</p>
 								<section>
 									<i class="fa fa-database"></i>
 									<h3>FoodPro - Database System and Analytics for an online food delivery application</h3>
-									<p>Created a robust scalable database system - leveraging MySQL and MongoDB for efficient data operations; implemented data
-validation, normalization and security measures to ensure data integrity and confidentiality. Analyzed real-time data (transactional and reference) with Python, SQl and NoSQL to suggest A/B testing marketing campaigns.
-Increased customer repeat rate by 28%; recommended subscription marketing strategies.
-</p>
+									<p>Created a robust scalable database system - leveraging MySQL and MongoDB for efficient data operations; implemented data validation, normalization and security measures to ensure data integrity and confidentiality. Analyzed real-time data (transactional and reference) with Python, SQl and NoSQL to suggest A/B testing marketing campaigns. Increased customer repeat rate by 28%; recommended subscription marketing strategies.</p>
 									<ul class="actions">
 										<button type = "button" style="font-size:8px"><a href="https://github.com/prajwalk7/FoodPro---Online-Food-Delivery-Database-Management-System-and-Analytics">Learn More</a></button>
 									</ul>
@@ -198,7 +194,7 @@ Increased customer repeat rate by 28%; recommended subscription marketing strate
 								<section>
 								<i class="fa fa-plane"></i>
 									<h3>Domestic Flights Price Predictor</h3>
-									<p>Hypertuned ensemble model (Random Forest) with cross validation (Grid Search) on Root Mean Squared Error (RMSE) and Mean Absolute Error (MAE) while achieving a final accuracy of over 85%. Set up a Flask web app to predict domestic flights prices in India. </p>								</p>
+									<p>Hypertuned ensemble model (Random Forest) with cross validation (Grid Search) on Root Mean Squared Error (RMSE) and Mean Absolute Error (MAE) while achieving a final accuracy of over 85%. Set up a Flask web app to predict domestic flights prices in India.</p>								</p>
 									<ul class="actions">
 										<button type = "button" style="font-size:8px"><a href="https://github.com/prajwalk7/Domestic-Flights-Price-Predictor">Learn More</a></button>
 										<button type = "button" style="font-size:8px"><a href="https://dom-flights-price-pred.herokuapp.com/">View Web App</a></button>
