--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
 									<h4>Analyst of Decision Sciences</h4>
 		  						Sep 2020 - Aug 2022<br><br>
 
-									<p>Governed and risk assessed model compliance inline with the model risk management framework for financial crimes (AML TM,
-Sanctions, Risk Rating, Fraud Risk, and Surveillance), fulfilling governance and auditing of over 70 FCR models.</p>
-									<p>Evaluated and optimized the performance of rule-based, statistical, and ML-based models by aligning them with model risk drivers
-- based on demography and group model risk policy/standards (GMRP/GMRS/MCS), achieved a 31% increase in model lift.</p>
-									<p>Managed and coordinated with key international stakeholders from over 55 countries to ensure model compliance; resulting in a
-90% compliance rate and a 15% reduction ($30mil) in loss due to non-compliance.</p>
-									<p>Orchestrated cross-functional collaboration between developers and business units through effective stakeholder management,
-leading to 11% uplift in monitoring coverage with minimal governance expenditure.</p>
+									<p>Modelled and risk assessed financial crime risk (FCR) model’s compliance, inline with the model risk management framework;
+ensured governance and deployment of over 80 FCR models; achieved a 31% increase in model lift.</p>
+									<p>Validated and Optimized rule-based/statistical/ML models using Python, SQL, and Excel, resulting in an overall 7%
+reduction in SARs filed and 9% increase in SAR conversion rate.</p>
+									<p>Monitored model performance using robust backtesting techniques; led to 18% reduction in model drift triggers and a 14%
+uplift in model monitoring coverage; monitored on Collibra (data) and Power BI Service (model KPIs) dashboards.</p>
+									<p>Managed cross-functional collaboration between stakeholders and developers from over 55 countries, accomplishing 93% model
+governance compliance rate through effective stakeholder management.</p>
 									<p>Implemented an efficient agile risk review framework reducing the governance TAT by an average of 36 hours per model.</p>
 									<p>Awarded the ”Rising Star - 2021” in Global Analytics Center (GAC) - HSBC.</p>
 										
@@ -100,8 +100,8 @@ leading to 11% uplift in monitoring coverage with minimal governance expenditure
 		  						Apr 2020 - Jul 2020<br><br>
 									<p>Built diverse data visualizations in Tableau while integrating scalable data sources, providing remarkable insights and increasing
 overall user engagement by 40%.</p>
-									<p>Developed fully functional web applications using Django and Flask to enhance customer experience; leading to a 20% user
-growth. Deployed the model and the web app on Heroku with 93% satisfaction ratings from stakeholders.</p>
+									<p>Developed 4 fully functional web applications using Django and Flask; Deployed the model and the web app on Heroku with
+93% satisfaction ratings from product owners.</p>
 									</div>
 							</div>
 						</section>
