--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
 									<h4>Analyst of Decision Sciences</h4>
 		  						Sep 2020 - Aug 2022<br><br>
 
-									<p>Modelled and risk assessed financial crime risk (FCR) model’s compliance, inline with the model risk management framework;
-ensured governance and deployment of over 80 FCR models; achieved a 31% increase in model lift.</p>
+									<p>Modelled and risk assessed financial crime risk model’s compliance; ensured governance for 80+ models, resulting in
+a 31% increase in model lift.</p>
 									<p>Validated and Optimized rule-based/statistical/ML models using Python, SQL, and Excel, resulting in an overall 7%
 reduction in SARs filed and 9% increase in SAR conversion rate.</p>
-									<p>Monitored model performance using robust backtesting techniques; led to 18% reduction in model drift triggers and a 14%
-uplift in model monitoring coverage; monitored on Collibra (data) and Power BI Service (model KPIs) dashboards.</p>
-									<p>Managed cross-functional collaboration between stakeholders and developers from over 55 countries, accomplishing 93% model
-governance compliance rate through effective stakeholder management.</p>
+									<p>Reduced model drift triggers by 18% and increased monitoring coverage by 14% through robust back-testing and 
+monitoring on Collibra and Power BI dashboards.</p>
+									<p>Managed cross-functional collaboration among stakeholders and developers from 55+ countries, resulting in 93% 
+compliance with model governance.</p>
 									<p>Implemented an efficient agile risk review framework reducing the governance TAT by an average of 36 hours per model.</p>
 									<p>Awarded the ”Rising Star - 2021” in Global Analytics Center (GAC) - HSBC.</p>
 										
